Fix -Z issues, allow -A to turn off enforcement of azimuth window, fixed bug in -S when no unit added, added test wiggles.sh

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,8 +26,8 @@ if (DO_TESTS)
 		grdmask grdmath grdpaste grdproject grdconvert grdsample grdtrack
 		grdtrend grdvector grdview grdvolume greenspline gshhg kml mapproject ogr
 		project psbasemap pscoast pscontour pshistogram psimage pslegend psmask postscriptlight
-		psrose pssac psscale pssolar pstext psxy psxyz sample1d segy spectrum1d sph sph2grd splitxyz
-		surface time trend1d trend2d triangulate img meca mgd77 potential spotter x2sys)
+		psrose pssac psscale pssolar pstext pswiggle psxy psxyz sample1d segy spectrum1d sph sph2grd
+		splitxyz surface time trend1d trend2d triangulate img meca mgd77 potential spotter x2sys)
 
 	# export HAVE_GMT_DEBUG_SYMBOLS
 	get_directory_property (_dir_defs COMPILE_DEFINITIONS)
