--- a/src/potential/CMakeLists.txt
+++ b/src/potential/CMakeLists.txt
@@ -20,7 +20,7 @@
 #
 
 # source files
-set (SUPPL_LIB_SRCS okbfuns.h okbfuns.c)
+set (SUPPL_LIB_SRCS okbfuns.h okbfuns.c talwani.h)
 set (SUPPL_PROGS_SRCS grdredpol.c gmtgravmag3d.c gmtflexure.c gravfft.c gpsgridder.c
 	grdflexure.c grdgravmag3d.c grdseamount.c talwani2d.c talwani3d.c)
 
