--- a/doc/rst/conf.py.in
+++ b/doc/rst/conf.py.in
@@ -305,6 +305,7 @@ man_pages = [
 ('psmask', 'psmask', 'Use data tables to clip or mask map areas with no coverage', '', 1),
 ('psrose', 'psrose', 'Plot a polar histogram (rose, sector, windrose diagrams)', '', 1),
 ('psscale', 'psscale', 'Plot a gray or color scale-bar on maps', '', 1),
+('psternary', 'psternary', 'Plot data on ternary diagrams', '', 1),
 ('pstext', 'pstext', 'Plot or typeset text on maps', '', 1),
 ('pswiggle', 'pswiggle', 'Plot z = f(x,y) anomalies along tracks', '', 1),
 ('psxy', 'psxy', 'Plot lines, polygons, and symbols on maps', '', 1),
