Added plasma, magma, inferno, and viridis colormaps from matplotlib

--- a/share/conf/gmt_cpt.conf
+++ b/share/conf/gmt_cpt.conf
@@ -29,12 +29,15 @@ gray        : Gray linear ramp from black to white [C=RGB]
 haxby       : Bill Haxby's color scheme for geoid & gravity [C=RGB]
 hot         : Black through red and yellow to white [C=RGB]
 ibcso       : The IBCSO bathymetry colors [R=-12000/0, C=RGB]
+inferno     : New colormap Option B from matplotlib [C=RGB]
 jet         : Dark to light blue, white, yellow and red [C=RGB]
+magma       : New colormap Option A from matplotlib [C=RGB]
 nighttime   : Colors for DMSP-OLS Nighttime Lights Time Series [C=HSV]
 no_green    : For those who hate green [H=0, C=RGB]
 ocean       : White-green-blue bathymetry scale [R=-8000/0, C=RGB]
 paired      : Qualitative color map with 6 pairs of colors [C=RGB]
 panoply     : Default colormap of Panoply [C=RGB]
+plasma      : New colormap Option C from matplotlib [C=RGB]
 polar       : Blue via white to red [H=0, C=RGB]
 rainbow     : Rainbow: magenta-blue-cyan-green-yellow-red [C=HSV]
 red2green   : Polar scale from red to green via white [H=0, C=RGB]
@@ -45,5 +48,6 @@ seis        : R-O-Y-G-B seismic tomography colors [C=RGB]
 split       : Like polar, but via black instead of white [H=0, C=RGB]
 terra       : Colors for global bathymetry/topography relief [R=-7000/7000, H=0, C=RGB]
 topo        : Sandwell/Anderson colors for topography [R=-7000/+7000, H=0, C=HSV]
+viridis     : New colormap Option D from matplotlib [C=RGB]
 world       : Colors for global bathymetry/topography relief [R=-7000/7000, H=0, C=RGB]
 wysiwyg     : 20 well-separated RGB colors [C=RGB]
