--- a/src/gmt_dimensions.h.in
+++ b/src/gmt_dimensions.h.in
@@ -25,5 +25,6 @@
 #define GMT_N_MEDIA       @GMT_N_MEDIA@ /* Lines in gmt_media_name.h */
 #define GMT_N_PEN_NAMES   @GMT_N_PEN_NAMES@ /* Lines in gmt_pennames.h */
 #define GMT_N_UNIQUE      @GMT_N_UNIQUE@ /* Lines in gmt_unique.h */
+#define GMT_N_CPT_MASTERS @GMT_N_CPT_MASTERS@ /* Lines in gmt_cpt_masters.h */
 
 /* vim: set ft=c: */
