--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,7 +84,7 @@ endif (NOT DEFINED GMT_EXCLUDE_FFTW3)
 if (FFTW3_FOUND)
 	set (HAVE_FFTW3F TRUE CACHE INTERNAL "System has single precision FFTW")
 	if (FFTW3F_THREADS_LIBRARY)
-		set (HAVE_FFTW3F_THREADS TRUE CACHE INTERNAL "System has single precision threadded FFTW")
+		set (HAVE_FFTW3F_THREADS TRUE CACHE INTERNAL "System has single precision threaded FFTW")
 	endif (FFTW3F_THREADS_LIBRARY)
 	include_directories (${FFTW3_INCLUDE_DIR})
 	list (APPEND GMT_OPTIONAL_LIBRARIES ${FFTW3F_LIBRARIES})
@@ -127,7 +127,7 @@ endif (APPLE)
 if (DEFINED GMT_ENABLE_OPENMP)
 	set (GMT_OPENMP TRUE CACHE INTERNAL "Turn on GMT OpenMP")
 endif (DEFINED GMT_ENABLE_OPENMP)
-find_package (OpenMP) # OpenMP not used; disabled for now
+find_package (OpenMP)
 if (OPENMP_FOUND AND GMT_OPENMP)
 	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 	set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_C_FLAGS}")
@@ -136,7 +136,7 @@ if (OPENMP_FOUND AND GMT_OPENMP)
 	set (GMT_CONFIG_OPENMP_MESSAGE "enabled"
 		CACHE INTERNAL "OPENMP config message")
 	if (WIN32 AND OMP_DLL_LOC)
-		# UGLY AND RISKY PATCH FOR THE CPACK BUG OF NOT COPYING THE OMP DLL. tHIS PATCH RELIES
+		# UGLY AND RISKY PATCH FOR THE CPACK BUG OF NOT COPYING THE OMP DLL. THIS PATCH RELIES
 		# ON THE SETING OF THE OMP_DLL_LOC VARIABLE IN ConfigUser.cmake. MINE HAS:
 		# set (OMP_DLL_LOC "C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/redist/x64/Microsoft.VC120.OPENMP/vcomp120.dll")
 		install(FILES ${OMP_DLL_LOC} DESTINATION bin COMPONENT Libraries)
