--- a/src/gmt_config.h.in
+++ b/src/gmt_config.h.in
@@ -120,7 +120,7 @@
 #cmakedefine HAVE__PCLOSE
 #cmakedefine HAVE_POPEN
 #cmakedefine HAVE__POPEN
-#cmakedefine HAVE_POSIX_MEMALIGN
+#cmakedefine HAVE_POSIX_MEMALIGN 1
 #cmakedefine HAVE_QSORT_R_GLIBC
 #cmakedefine HAVE_SETLOCALE
 #cmakedefine HAVE__SETMODE
