Apply patches from issue #1101 to 5.4 branch first

--- a/share/tools/gmt5syntax.in
+++ b/share/tools/gmt5syntax.in
@@ -30,7 +30,7 @@ grdvector grdview grdvolume greenspline gshhg hotspotter img2grd kml2gmt
 makecpt mapproject mgd77convert mgd77info mgd77list mgd77magref mgd77manage
 mgd77path mgd77sniffer mgd77track minmax nearneighbor originator project
 psconvert psbasemap psclip pscoast pscontour pscoupe pshistogram psimage
-pslegend psmask psmeca pspolar psrose psscale pssegy pssegyz pstext psvelo
+pslegend psmask psmeca pspolar psrose pssac psscale pssegy pssegyz pstext psvelo
 pswiggle psxy psxyz rotconverter sample1d segy2grd spectrum1d sph2grd
 sphdistance sphinterpolate sphtriangulate splitxyz surface talwani2d talwani3d trend1d trend2d
 triangulate x2sys_binlist x2sys_cross x2sys_datalist x2sys_get x2sys_init
