--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,7 +25,7 @@ if (DO_TESTS)
 		grdedit grdfft grdfilter grdgradient grdhisteq grdimage grdinfo grdlandmask
 		grdmask grdmath grdpaste grdproject grdconvert grdsample grdtrack
 		grdtrend grdvector grdview grdvolume greenspline gshhg kml mapproject nearneighbor ogr
-		project psbasemap pscoast pscontour pshistogram psimage pslegend psmask postscriptlight
+		project psbasemap pscoast pscontour pshistogram psimage pslegend psmask postscriptlight psclip
 		psrose pssac psscale pssolar psternary pstext pswiggle psxy psxyz sample1d segy spectrum1d sph sph2grd
 		splitxyz surface time trend1d trend2d triangulate img meca mgd77 potential spotter x2sys)
 
