--- a/test/gmtest.in
+++ b/test/gmtest.in
@@ -11,6 +11,7 @@ test -z "$1" && exit 1
 
 # Name of the script and the directory portion of it
 script_name="$1"
+script_mode="$2"
 script_dir=$(dirname "${script_name}")
 script="@GMT_SOURCE_DIR@/test/${script_name}"
 src="@GMT_SOURCE_DIR@/test/${script_dir}"
@@ -186,7 +187,21 @@ exec_dir="@CMAKE_CURRENT_BINARY_DIR@/${script_name%.sh}"
 rm -rf "$exec_dir"
 mkdir -p "$exec_dir"
 cd "$exec_dir"
-ln -sf "$script" .
+if [ "X$script_mode" = "XM" ]; then
+	# Test a modernized version of the script instead
+	classic=$(grep "GMT CLASSIC" "$script" -c)
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script"
+		local_script=$(basename "${script_name}")
+		gmtmodernize "$script" > ./${local_script}
+	else
+		echo "error: Cannot modernize classic GMT script ${script}." >&2
+		exit 1
+	fi
+else
+	# Run the original classic script as is
+	ln -sf "$script" .
+fi
 
 # Make a script to capture everything that can be run again
 cat > gmtest.sh << EOF
