--- a/doc/examples/animate.in
+++ b/doc/examples/animate.in
@@ -9,6 +9,7 @@ test -z "$1" && exit 1
 
 # Where the current script resides (need absolute path)
 script_name="$1"
+script_mode="$2"
 script_dir=$(dirname "${script_name}")
 script="@GMT_SOURCE_DIR@/doc/examples/${script_name}"
 if ! [ -x "${script}" ]; then
@@ -84,9 +85,23 @@ for file in `ls "$src"/* | egrep -v '.bat$|.ps$|.sh$'` ; do
 done
 
 # Start with proper GMT defaults
-gmt set -Du FORMAT_TIME_STAMP "Version 5"
+gmt set -Du FORMAT_TIME_STAMP "Version 6"
 
-# Now run the original script
-. "${script}" animate
+if [ "X$script_mode" = "XM" ]; then
+	# Test a modernized version of the script instead
+	classic=$(grep "GMT CLASSIC" "$script" -c)
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script"
+		local_script=$(basename "${script_name}")
+		gmtmodernize "$script" > ./${local_script}
+	else
+		echo "error: Cannot modernize classic GMT script ${script}." >&2
+		exit 1
+	fi
+	. "${local_script}" animate
+else
+	# Now run the original script
+	. "${script}" animate
+fi
 
 # vim: ft=sh
