--- a/doc/examples/gmtest.in
+++ b/doc/examples/gmtest.in
@@ -9,6 +9,7 @@ test -z "$1" && exit 1
 
 # Where the current script resides (need absolute path)
 script_name="$1"
+script_mode="$2"
 script_dir=$(dirname "${script_name}")
 script="@GMT_SOURCE_DIR@/doc/examples/${script_name}"
 src="@GMT_SOURCE_DIR@/doc/examples/${script_dir}"
@@ -160,7 +161,21 @@ for file in `ls "$src"/* | egrep -v '.bat$|.ps$|.sh$'` ; do
   test -f "$file" && ln -s "$file" .
 done
 
-ln -sf "$script" .
+if [ "X$script_mode" = "XM" ]; then
+	# Test a modernized version of the script instead
+	classic=$(grep "GMT CLASSIC" "$script" -c)
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script"
+		local_script=$(basename "${script_name}")
+		gmtmodernize "$script" > ./${local_script}
+	else
+		echo "error: Cannot modernize classic GMT script ${script}." >&2
+		exit 1
+	fi
+else
+	# Run the original classic script as is
+	ln -sf "$script" .
+fi
 
 # Make a script to capture everything that can be run again
 cat > gmtest.sh << EOF
@@ -180,7 +195,7 @@ export GMT_SOURCE_DIR="@GMT_SOURCE_DIR@"
 # Font lookup path for Ghostscript (invoked from gm compare and psconvert)
 export GS_FONTPATH="@CMAKE_CURRENT_SOURCE_DIR@/ex31/fonts"
 # Start with proper GMT defaults
-gmt set -Du FORMAT_TIME_STAMP "Version 5"
+gmt set -Du FORMAT_TIME_STAMP "Version 6"
 # Now run the original script
 . "${script}"
 EOF
