--- a/doc/scripts/gmtest.in
+++ b/doc/scripts/gmtest.in
@@ -8,6 +8,7 @@ test -z "$1" && exit 1
 
 # Where the current script resides (need absolute path)
 script_name="$1"
+script_mode="$2"
 script="@GMT_SOURCE_DIR@/doc/scripts/${script_name}"
 src="@GMT_SOURCE_DIR@/doc/scripts"
 tut="@GMT_SOURCE_DIR@/doc/tutorial"
@@ -146,7 +147,21 @@ exec_dir="@CMAKE_CURRENT_BINARY_DIR@/${script_name%.sh}"
 rm -rf "$exec_dir"
 mkdir -p "$exec_dir"
 cd "$exec_dir"
-ln -sf "$script" .
+if [ "X$script_mode" = "XM" ]; then
+	# Test a modernized version of the script instead
+	classic=$(grep "GMT CLASSIC" "$script" -c)
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script"
+		local_script=$(basename "${script_name}")
+		gmtmodernize "$script" > ./${local_script}
+	else
+		echo "error: Cannot modernize classic GMT script ${script}." >&2
+		exit 1
+	fi
+else
+	# Run the original classic script as is
+	ln -sf "$script" .
+fi
 
 # Make a script to capture everything that can be run again
 cat > gmtest.sh << EOF
