--- a/doc/examples/CMakeLists.txt
+++ b/doc/examples/CMakeLists.txt
@@ -162,6 +162,12 @@ if (UNIX)
 endif (UNIX)
 
 # run examples (test)
+if (MODERNIZE_TESTS)
+	set (SCRIPT_MODE "M")
+else (MODERNIZE_TESTS)
+	set (SCRIPT_MODE "C")
+endif (MODERNIZE_TESTS)
+
 if (DO_EXAMPLES) # AND UNIX)
 	# this file takes care of setting up the test environment
 	configure_file (gmtest.in gmtest @ONLY)
@@ -179,7 +185,7 @@ if (DO_EXAMPLES) # AND UNIX)
 		string (REPLACE "//" "/" _job ${_job})	# GLOB creates double slashes we do not want
 		add_test (NAME ${_job}
 			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-			COMMAND ${BASH} gmtest ${_job})
+			COMMAND ${BASH} gmtest ${_job} ${SCRIPT_MODE})
 	endforeach (_job ${_examples})
 elseif (DO_EXAMPLES_WIN_BATCH_DISABLED) # (DO_EXAMPLES AND WIN32)
 	# only supporting examples with installed GMT in %path%
@@ -189,7 +195,7 @@ elseif (DO_EXAMPLES_WIN_BATCH_DISABLED) # (DO_EXAMPLES AND WIN32)
 			${CMAKE_CURRENT_BINARY_DIR}/${_job} PATH)
 		add_test (NAME ${_job}
 			WORKING_DIRECTORY ${_job_path}
-			COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_job})
+			COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_job} ${SCRIPT_MODE})
 	endforeach (_job ${_examples_win})
 endif (DO_EXAMPLES) # AND UNIX)
 
