--- a/test/gmtest.in
+++ b/test/gmtest.in
@@ -189,15 +189,15 @@ mkdir -p "$exec_dir"
 cd "$exec_dir"
 if [ "X$script_mode" = "XM" ]; then
 	# Test a modernized version of the script instead
-	classic=$(grep "GMT CLASSIC" "$script" -c)
-	if [ $classic -eq 0 ]; then
+	#classic=$(grep "GMT CLASSIC" "$script" -c)
+	#if [ $classic -eq 0 ]; then
 		echo "Modernizing $script before testing"
 		local_script=$(basename "${script_name}")
 		gmtmodernize "$script" > ./${local_script}
-	else
-		echo "error: Cannot modernize classic GMT script ${script}." >&2
-		exit 1
-	fi
+	#else
+	#	echo "error: Cannot modernize classic GMT script ${script}." >&2
+	#	exit 1
+	#fi
 else
 	# Run the original classic script as is
 	ln -sf "$script" .
