--- a/doc/examples/animate.in
+++ b/doc/examples/animate.in
@@ -11,7 +11,9 @@ test -z "$1" && exit 1
 script_name="$1"
 script_mode="$2"
 script_dir=$(dirname "${script_name}")
+local_script=$(basename "${script_name}")
 script="@GMT_SOURCE_DIR@/doc/examples/${script_name}"
+classic=$(grep "GMT CLASSIC" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
   exit 1
@@ -87,16 +89,16 @@ gmt set -Du FORMAT_TIME_STAMP "Version 6"
 
 if [ "X$script_mode" = "XM" ]; then
 	# Test a modernized version of the script instead
-	#classic=$(grep "GMT CLASSIC" "$script" -c)
-	#if [ $classic -eq 0 ]; then
-		echo "Modernizing $script before testing"
-		local_script=$(basename "${script_name}")
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script to $local_script before testing"
 		gmtmodernize "$script" > ./${local_script}
-	#else
-	#	echo "error: Cannot modernize classic GMT script ${script}." >&2
-	#	exit 1
-	#fi
-	. "${local_script}" animate
+		export GMT_PPID=$$
+		echo "Set GMT_PPID = $GMT_PPID"
+		. "${local_script}" animate
+	else
+		echo "Cannot modernize classic GMT script ${script}. Run in classic mode" >&2
+		. "${script}" animate
+	fi
 else
 	# Now run the original script
 	. "${script}" animate
