--- a/doc/examples/gmtest.in
+++ b/doc/examples/gmtest.in
@@ -11,8 +11,10 @@ test -z "$1" && exit 1
 script_name="$1"
 script_mode="$2"
 script_dir=$(dirname "${script_name}")
+local_script=$(basename "${script_name}")
 script="@GMT_SOURCE_DIR@/doc/examples/${script_name}"
 src="@GMT_SOURCE_DIR@/doc/examples/${script_dir}"
+classic=$(grep "GMT CLASSIC" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
   exit 1
@@ -163,17 +165,15 @@ done
 
 if [ "X$script_mode" = "XM" ]; then
 	# Test a modernized version of the script instead
-	#classic=$(grep "GMT CLASSIC" "$script" -c)
-	#if [ $classic -eq 0 ]; then
-		echo "Modernizing $script before testing"
-		local_script=$(basename "${script_name}")
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script to $local_script before testing"
 		gmtmodernize "$script" > ./${local_script}
-	#else
-	#	echo "error: Cannot modernize classic GMT script ${script}." >&2
-	#	exit 1
-	#fi
+	else
+		echo "Cannot modernize classic GMT script ${script}. Run in classic mode" >&2
+		ln -sf "$script" .
+	fi
 else
-	# Run the original classic script as is
+	# Run the original classic script via link from current directory
 	ln -sf "$script" .
 fi
 
@@ -195,11 +195,20 @@ export GMT_SOURCE_DIR="@GMT_SOURCE_DIR@"
 export GS_FONTPATH="@CMAKE_CURRENT_SOURCE_DIR@/ex31/fonts"
 # Start with proper GMT defaults
 gmt set -Du FORMAT_TIME_STAMP "Version 6"
-# Now run the original script
-. "${script}"
+# Modern mode needs a stable PPID but ctest messes that up when pipes are used
+if [ "X$script_mode" = "XM" ]; then
+	export GMT_PPID=\$\$
+	echo "Set GMT_PPID = \$GMT_PPID"
+fi
+# Now run the script
+. "${local_script}"
 EOF
 chmod 755 gmtest.sh
 
 . ./gmtest.sh
+# Modern mode needs to reestablish the $ps variable before exit
+if [ "X$script_mode" = "XM" ] && [ ! "X$ps" = "X" ]; then
+	ps="${local_script%.sh}.ps"
+fi
 
 # vim: ft=sh
