--- a/doc/scripts/gmtest.in
+++ b/doc/scripts/gmtest.in
@@ -10,8 +10,10 @@ test -z "$1" && exit 1
 script_name="$1"
 script_mode="$2"
 script="@GMT_SOURCE_DIR@/doc/scripts/${script_name}"
+local_script=$(basename "${script_name}")
 src="@GMT_SOURCE_DIR@/doc/scripts"
 tut="@GMT_SOURCE_DIR@/doc/tutorial"
+classic=$(grep "GMT CLASSIC" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
   exit 1
@@ -149,17 +151,15 @@ mkdir -p "$exec_dir"
 cd "$exec_dir"
 if [ "X$script_mode" = "XM" ]; then
 	# Test a modernized version of the script instead
-	#classic=$(grep "GMT CLASSIC" "$script" -c)
-	#if [ $classic -eq 0 ]; then
-		echo "Modernizing $script before testing"
-		local_script=$(basename "${script_name}")
+	if [ $classic -eq 0 ]; then
+		echo "Modernizing $script to $local_script before testing"
 		gmtmodernize "$script" > ./${local_script}
-	#else
-	#	echo "error: Cannot modernize classic GMT script ${script}." >&2
-	#	exit 1
-	#fi
+	else
+		echo "Cannot modernize classic GMT script ${script}. Run in classic mode" >&2
+		ln -sf "$script" .
+	fi
 else
-	# Run the original classic script as is
+	# Run the original classic script via link from current directory
 	ln -sf "$script" .
 fi
 
@@ -181,11 +181,20 @@ export GMT_VERSION="@GMT_PACKAGE_VERSION_WITH_SVN_REVISION@"
 gmt set -Du PS_CHAR_ENCODING ISOLatin1+
 # Tentative PS file name
 ps="${script_name%.sh}.ps"
-# Now run the original script
-. "${script}"
+# Modern mode needs a stable PPID but ctest messes that up when pipes are used
+if [ "X$script_mode" = "XM" ]; then
+	export GMT_PPID=\$\$
+	echo "Set GMT_PPID = \$GMT_PPID"
+fi
+# Now run the script
+. "${local_script}"
 EOF
 chmod 755 gmtest.sh
 
 . ./gmtest.sh
+# Modern mode needs to reestablish the $ps variable before exit
+if [ "X$script_mode" = "XM" ] && [ ! "X$ps" = "X" ]; then
+	ps="${local_script%.sh}.ps"
+fi
 
 # vim: ft=sh
