--- a/doc/fig/CMakeLists.txt
+++ b/doc/fig/CMakeLists.txt
@@ -18,7 +18,7 @@
 
 # Figure files
 set (_fig_fig GMT4_mode.png GMT5_Summit_2016.jpg GMT5_mode.png GMT5_external.png
-	GMT_Environment.png gimp-sliders+panel.png hsv-cone.png
+	GMT_Environment.png GMT_record.png gimp-sliders+panel.png hsv-cone.png
 	formatpicture.png formatting.png highres.png
 	noantialias.png rendering.png withantialias.png)
 
