--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -252,7 +252,7 @@ endif (NOT LICENSE_RESTRICTED)
 # Note: Developers can set EXTRA_MODULES in ConfigUser.cmake to test new modules
 set (GMT_PROGS_SRCS blockmean.c blockmedian.c blockmode.c filter1d.c
 	fitcircle.c gmt2kml.c gmtconvert.c gmtlogo.c gmtmath.c gmtselect.c gmtsimplify.c
-	gmtspatial.c gmtconnect.c gmtregress.c gmtvector.c gmtwhich.c grd2cpt.c grd2rgb.c
+	gmtspatial.c gmtconnect.c gmtregress.c gmtvector.c gmtwhich.c grd2cpt.c
 	grd2xyz.c grdblend.c grdclip.c grdcut.c grdedit.c grdfft.c grdfilter.c
 	grdgradient.c grdhisteq.c grdinfo.c grdlandmask.c grdmask.c grdmath.c
 	grdpaste.c grdproject.c grdraster.c grdsample.c grdconvert.c grdtrack.c
