Added new module grd2kml for KML quadtrees

--- a/doc/rst/conf.py.in
+++ b/doc/rst/conf.py.in
@@ -259,6 +259,7 @@ man_pages = [
 ('gmtvector', 'gmtvector', 'Basic manipulation of Cartesian vectors', '', 1),
 ('gmtwhich', 'gmtwhich', 'Find full path to specified files', '', 1),
 ('grd2cpt', 'grd2cpt', 'Make linear or histogram-equalized color palette table from grid', '', 1),
+('grd2kml', 'grd2kml', 'Create KML image quadtree from single grid', '', 1),
 ('grd2xyz', 'grd2xyz', 'Convert grid file to data table', '', 1),
 ('grdblend', 'grdblend', 'Blend several partially over-lapping grids into one large grid', '', 1),
 ('grdclip', 'grdclip', 'Clip the range of grids', '', 1),
