Adding polespotter to the spotter package

--- a/src/spotter/CMakeLists.txt
+++ b/src/spotter/CMakeLists.txt
@@ -21,7 +21,7 @@
 
 # source files
 set (SUPPL_LIB_SRCS spotter.h libspotter.c)
-set (SUPPL_PROGS_SRCS backtracker.c gmtpmodeler.c grdpmodeler.c grdrotater.c
+set (SUPPL_PROGS_SRCS backtracker.c gmtpmodeler.c grdpmodeler.c grdrotater.c polespotter.c
 	grdspotter.c hotspotter.c originator.c rotconverter.c rotsmoother.c)
 
 # example files
