--- a/doc/rst/conf.py.in
+++ b/doc/rst/conf.py.in
@@ -358,6 +358,7 @@ man_pages = [
 ('supplements/spotter/grdspotter', 'grdspotter', 'Create CVA image from a gravity or topography grid', '', 1),
 ('supplements/spotter/hotspotter', 'hotspotter', 'Create CVA image from seamount locations', '', 1),
 ('supplements/spotter/originator', 'originator', 'Associate seamounts with nearest hotspot point sources', '', 1),
+('supplements/spotter/polespotter', 'polespotter', 'Find stage poles given fracture zones and abyssal hills', '', 1),
 ('supplements/spotter/rotconverter', 'rotconverter', 'Manipulate total reconstruction and stage rotations', '', 1),
 ('supplements/x2sys/x2sys_binlist', 'x2sys_binlist', 'Create bin index listing from track data files', '', 1),
 ('supplements/x2sys/x2sys_cross', 'x2sys_cross', 'Calculate crossovers between track data files', '', 1),
