Update a few exmod tests and fix gmtext.in for these

--- a/test/gmtest.in
+++ b/test/gmtest.in
@@ -248,6 +248,7 @@ gmt set -Du
 if [ "X$script_mode" = "XM" ] || [ "X$script_mode" = "Xm" ]; then
 	export GMT_PPID=\$\$
 	echo "Set GMT_PPID = \$GMT_PPID"
+	script_mode=M
 fi
 # Now run the script
 . "${local_script}"
@@ -255,7 +256,7 @@ EOF
 chmod 755 gmtest.sh
 . ./gmtest.sh
 # Modern mode needs to reestablish the $ps variable before exit
-if [ ! "X$script_mode" = "XC" ] && [ ! "X$ps" = "X" ]; then
+if [ "X$script_mode" = "XM" ] && [ "X$ps" = "X" ]; then
 	ps="${local_script%.sh}.ps"
 fi
 
