--- a/doc_modern/examples/gmtest.in
+++ b/doc_modern/examples/gmtest.in
@@ -12,8 +12,8 @@ script_name="$1"
 script_mode="$2"
 script_dir=$(dirname "${script_name}")
 local_script=$(basename "${script_name}")
-script="@GMT_SOURCE_DIR@/doc/examples/${script_name}"
-src="@GMT_SOURCE_DIR@/doc/examples/${script_dir}"
+script="@GMT_SOURCE_DIR@/doc_modern/examples/${script_name}"
+src="@GMT_SOURCE_DIR@/doc_modern/examples/${script_dir}"
 classic=$(grep "GMT CLASSIC" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
