--- a/doc_modern/scripts/gmtest.in
+++ b/doc_modern/scripts/gmtest.in
@@ -9,10 +9,10 @@ test -z "$1" && exit 1
 # Where the current script resides (need absolute path)
 script_name="$1"
 script_mode="$2"
-script="@GMT_SOURCE_DIR@/doc/scripts/${script_name}"
+script="@GMT_SOURCE_DIR@/doc_modern/scripts/${script_name}"
 local_script=$(basename "${script_name}")
-src="@GMT_SOURCE_DIR@/doc/scripts"
-tut="@GMT_SOURCE_DIR@/doc/tutorial"
+src="@GMT_SOURCE_DIR@/doc_modern/scripts"
+tut="@GMT_SOURCE_DIR@/doc_modern/tutorial"
 classic=$(grep "GMT CLASSIC" "$script" -c)
 if ! [ -x "${script}" ]; then
   echo "error: cannot execute script ${script}." >&2
