--- a/doc_modern/rst/conf.py.in
+++ b/doc_modern/rst/conf.py.in
@@ -295,24 +295,24 @@ man_pages = [
 ('mapproject', 'mapproject', 'Do forward and inverse map transformations, datum conversions and geodesy', '', 1),
 ('nearneighbor', 'nearneighbor', '"Grid table data using a ""Nearest neighbor"" algorithm"', '', 1),
 ('project', 'project', 'Project table data onto lines or great circles, generate tracks, or translate coordinates', '', 1),
-('psbasemap', 'psbasemap', 'Plot PostScript base maps', '', 1),
-('psclip', 'psclip', 'Initialize or terminate polygonal clip paths', '', 1),
-('pscoast', 'pscoast', 'Plot continents, shorelines, rivers, and borders on maps', '', 1),
-('pscontour', 'pscontour', 'Contour table data by direct triangulation [method]', '', 1),
-('psconvert', 'psconvert', 'Convert [E]PS file(s) to other formats using GhostScript', '', 1),
-('pshistogram', 'pshistogram', 'Calculate and plot histograms', '', 1),
-('psimage', 'psimage', 'Place images or EPS files on maps', '', 1),
-('pslegend', 'pslegend', 'Plot legends on maps', '', 1),
-('pssolar', 'pssolar', 'Plot day-light terminators and other sunlight parameters', '', 1),
+('basemap', 'basemap', 'Plot PostScript base maps', '', 1),
+('clip', 'clip', 'Initialize or terminate polygonal clip paths', '', 1),
+('coast', 'coast', 'Plot continents, shorelines, rivers, and borders on maps', '', 1),
+('contour', 'contour', 'Contour table data by direct triangulation [method]', '', 1),
+('convert', 'convert', 'Convert [E]PS file(s) to other formats using GhostScript', '', 1),
+('histogram', 'histogram', 'Calculate and plot histograms', '', 1),
+('image', 'image', 'Place images or EPS files on maps', '', 1),
+('legend', 'legend', 'Plot legends on maps', '', 1),
+('solar', 'solar', 'Plot day-light terminators and other sunlight parameters', '', 1),
 ('postscriptlight', 'postscriptlight', 'A PostScript based plotting library', '', 3),
-('psmask', 'psmask', 'Use data tables to clip or mask map areas with no coverage', '', 1),
-('psrose', 'psrose', 'Plot a polar histogram (rose, sector, windrose diagrams)', '', 1),
-('psscale', 'psscale', 'Plot a gray or color scale-bar on maps', '', 1),
-('psternary', 'psternary', 'Plot data on ternary diagrams', '', 1),
-('pstext', 'pstext', 'Plot or typeset text on maps', '', 1),
-('pswiggle', 'pswiggle', 'Plot z = f(x,y) anomalies along tracks', '', 1),
-('psxy', 'psxy', 'Plot lines, polygons, and symbols on maps', '', 1),
-('psxyz', 'psxyz', 'Plot lines, polygons, and symbols in 3-D', '', 1),
+('mask', 'mask', 'Use data tables to clip or mask map areas with no coverage', '', 1),
+('rose', 'rose', 'Plot a polar histogram (rose, sector, windrose diagrams)', '', 1),
+('scale', 'scale', 'Plot a gray or color scale-bar on maps', '', 1),
+('ternary', 'ternary', 'Plot data on ternary diagrams', '', 1),
+('text', 'text', 'Plot or typeset text on maps', '', 1),
+('wiggle', 'wiggle', 'Plot z = f(x,y) anomalies along tracks', '', 1),
+('plot', 'plot', 'Plot lines, polygons, and symbols on maps', '', 1),
+('plot3d', 'plot3d', 'Plot lines, polygons, and symbols in 3-D', '', 1),
 ('sample1d', 'sample1d', 'Resample 1-D table data using splines', '', 1),
 ('spectrum1d', 'spectrum1d', 'Compute auto- [and cross- ] spectra from one [or two] time-series', '', 1),
 ('sph2grd', 'sph2grd', 'Compute grid from spherical harmonic coefficients', '', 1),
@@ -328,11 +328,11 @@ man_pages = [
 ('xyz2grd', 'xyz2grd', 'Convert data table to a grid file', '', 1),
 ('supplements/gshhg/gshhg', 'gshhg', 'Extract data tables from binary GSHHG or WDBII data files', '', 1),
 ('supplements/img/img2grd', 'img2grd', 'Extract subset of img file in Mercator or Geographic format', '', 1),
-('supplements/meca/pscoupe', 'pscoupe', 'Plot cross-sections of focal mechanisms', '', 1),
-('supplements/meca/psmeca', 'psmeca', 'Plot focal mechanisms on maps', '', 1),
-('supplements/meca/pspolar', 'pspolar', 'Plot polarities on the inferior focal half-sphere on maps', '', 1),
-('supplements/meca/pssac', 'pssac', 'Plot seismograms in SAC format on maps', '', 1),
-('supplements/meca/psvelo', 'psvelo', 'Plot velocity vectors, crosses, and wedges on maps', '', 1),
+('supplements/meca/coupe', 'coupe', 'Plot cross-sections of focal mechanisms', '', 1),
+('supplements/meca/meca', 'meca', 'Plot focal mechanisms on maps', '', 1),
+('supplements/meca/polar', 'polar', 'Plot polarities on the inferior focal half-sphere on maps', '', 1),
+('supplements/meca/sac', 'sac', 'Plot seismograms in SAC format on maps', '', 1),
+('supplements/meca/velo', 'velo', 'Plot velocity vectors, crosses, and wedges on maps', '', 1),
 ('supplements/mgd77/mgd77convert', 'mgd77convert', 'Convert MGD77 data to other file formats', '', 1),
 ('supplements/mgd77/mgd77header', 'mgd77header', 'Create MGD77 headers from A77 files', '', 1),
 ('supplements/mgd77/mgd77info', 'mgd77info', 'Extract information about MGD77 files', '', 1),
@@ -353,8 +353,8 @@ man_pages = [
 ('supplements/potential/grdseamount', 'grdseamount', 'Compute synthetic seamount (Gaussian or cone, circular or elliptical) bathymetry', '', 1),
 ('supplements/potential/talwani2d', 'talwani2d', 'Compute free-air, geoid or vertical gravity gradients anomalies over 2-D bodies', '', 1),
 ('supplements/potential/talwani3d', 'talwani3d', 'Compute free-air, geoid or vertical gravity gradients anomalies over 3-D bodies', '', 1),
-('supplements/segy/pssegy', 'pssegy', 'Plot a SEGY file on a map', '', 1),
-('supplements/segy/pssegyz', 'pssegyz', 'Create imagemasked postscript from SEGY file', '', 1),
+('supplements/segy/segy', 'segy', 'Plot a SEGY file on a map', '', 1),
+('supplements/segy/segyz', 'segyz', 'Create imagemasked postscript from SEGY file', '', 1),
 ('supplements/segy/segy2grd', 'segy2grd', 'Converting SEGY data to a GMT grid', '', 1),
 ('supplements/spotter/backtracker', 'backtracker', 'Generate forward and backward flowlines and hotspot tracks', '', 1),
 ('supplements/spotter/gmtpmodeler', 'gmtpmodeler', 'Evaluate a plate motion model at given locations', '', 1),
