Adding experimental movie.c

--- a/doc_modern/rst/conf.py.in
+++ b/doc_modern/rst/conf.py.in
@@ -293,6 +293,8 @@ man_pages = [
 ('kml2gmt', 'kml2gmt', 'Extract GMT table data from Google Earth KML files', '', 1),
 ('makecpt', 'makecpt', 'Make GMT color palette tables', '', 1),
 ('mapproject', 'mapproject', 'Do forward and inverse map transformations, datum conversions and geodesy', '', 1),
+('mask', 'mask', 'Use data tables to clip or mask map areas with no coverage', '', 1),
+('movie', 'movie', 'Create animation sequences and movies', '', 1),
 ('nearneighbor', 'nearneighbor', '"Grid table data using a ""Nearest neighbor"" algorithm"', '', 1),
 ('project', 'project', 'Project table data onto lines or great circles, generate tracks, or translate coordinates', '', 1),
 ('basemap', 'basemap', 'Plot PostScript base maps', '', 1),
@@ -305,7 +307,6 @@ man_pages = [
 ('legend', 'legend', 'Plot legends on maps', '', 1),
 ('solar', 'solar', 'Plot day-light terminators and other sunlight parameters', '', 1),
 ('postscriptlight', 'postscriptlight', 'A PostScript based plotting library', '', 3),
-('mask', 'mask', 'Use data tables to clip or mask map areas with no coverage', '', 1),
 ('rose', 'rose', 'Plot a polar histogram (rose, sector, windrose diagrams)', '', 1),
 ('scale', 'scale', 'Plot a gray or color scale-bar on maps', '', 1),
 ('ternary', 'ternary', 'Plot data on ternary diagrams', '', 1),
