Added BLAS explicitly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -109,6 +109,25 @@ else (LAPACK_FOUND)
 	endif (LAPACK_LIBRARY)
 endif (LAPACK_FOUND)
 
+if (NOT DEFINED GMT_EXCLUDE_BLAS)
+	find_package (BLAS)
+endif (NOT DEFINED GMT_EXCLUDE_BLAS)
+if (BLAS_FOUND)
+	set (HAVE_BLAS TRUE CACHE INTERNAL "System has BLAS")
+	set (GMT_CONFIG_BLAS_MESSAGE "yes" CACHE INTERNAL "BLAS config message")
+	include_directories (${BLAS_INCLUDE_DIR})
+	list (APPEND GMT_OPTIONAL_LIBRARIES ${BLAS_LIBRARIES})
+else (BLAS_FOUND)
+	if (BLAS_LIBRARY)
+		# Set in ConfigUser.cmake
+		set (HAVE_BLAS TRUE CACHE INTERNAL "System has BLAS")
+		set (GMT_CONFIG_BLAS_MESSAGE "yes" CACHE INTERNAL "BLAS config message")
+		list (APPEND GMT_OPTIONAL_LIBRARIES ${BLAS_LIBRARY})
+	else (BLAS_LIBRARY)
+		set (GMT_CONFIG_BLAS_MESSAGE "no" CACHE INTERNAL "BLAS config message")
+	endif (BLAS_LIBRARY)
+endif (BLAS_FOUND)
+
 if (NOT DEFINED GMT_EXCLUDE_ZLIB)
 	find_package (ZLIB)
 endif (NOT DEFINED GMT_EXCLUDE_ZLIB)
