--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,7 @@ message(
 	"*  ZLIB library               : ${ZLIB_LIBRARY}\n"
 	"*  ZLIB include dir           : ${ZLIB_INCLUDE_DIR}\n"
 	"*  LAPACK library             : ${GMT_CONFIG_LAPACK_MESSAGE}\n"
+	"*  BLAS library               : ${GMT_CONFIG_BLAS_MESSAGE}\n"
 	"*  License restriction        : ${LICENSE_RESTRICTED}\n"
 	"*  Triangulation method       : ${GMT_TRIANGULATE}\n"
 	"*  OpenMP support             : ${GMT_CONFIG_OPENMP_MESSAGE}\n"
