Added new module grdfill, documentation, and 3 tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,8 +27,8 @@ if (DO_TESTS)
 	# list of test dirs {Note: You must add new test sub-directories here}
 	set (GMT_TEST_DIRS api byteswap blockmean blockmedian blockmode filter1d fitcircle gdal
 		genper gmt_core gmtconvert gmtlogo gmtmath gmtregress gmtselect gmtsimplify
-		gmtspatial gmtconnect gmtvector grd2xyz grdblend grdclip grdcontour
-		grdcut grdedit grdfft grdfilter grdgradient grdhisteq grdimage grdinfo grdlandmask
+		gmtspatial gmtconnect gmtvector grd2xyz grdblend grdclip grdcontour grdcut
+		grdedit grdfft grdfill grdfilter grdgradient grdhisteq grdimage grdinfo grdlandmask
 		grdmask grdmath grdpaste grdproject grdconvert grdsample grdtrack grdtrend
 		grdvector grdview grdvolume greenspline gshhg kml makecpt mapproject nearneighbor
 		ogr postscriptlight project psbasemap psclip pscoast pscontour pshistogram psimage
