--- a/doc_classic/rst/conf.py.in
+++ b/doc_classic/rst/conf.py.in
@@ -268,6 +268,7 @@ man_pages = [
 ('grdcut', 'grdcut', 'Extract subregion from a grid', '', 1),
 ('grdedit', 'grdedit', 'Modify header or content of a grid', '', 1),
 ('grdfft', 'grdfft', 'Do mathematical operations on grids in the wavenumber (or frequency) domain', '', 1),
+('grdfill', 'grdfill', 'Interpolate across holes in a grid', '', 1),
 ('grdfilter', 'grdfilter', 'Filter a grid in the space (or time) domain', '', 1),
 ('grdgradient', 'grdgradient', 'Compute directional derivative or gradient from a grid', '', 1),
 ('grdhisteq', 'grdhisteq', 'Perform histogram equalization for a grid', '', 1),
